--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,17 @@
 .App{
     display: flex;
 }
+
+.NavBar{
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+    border: 1px solid black;
+    width: 10vw;
+    height: 100vh;
+    &__item{
+        margin: 50px 20px;
+        text-align: center;
+    }
+    background-color:  #ee6c4d;
+}
