--- a/src/components/CardList/CardList.scss
+++ b/src/components/CardList/CardList.scss
@@ -1,9 +1,6 @@
 .card-list{ 
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr ;
     grid-gap: 20px;
-    background-color: lightcyan;
-    
-    
-    
+    border-radius: 10%;
 }
