--- a/src/components/Main/Main.scss
+++ b/src/components/Main/Main.scss
@@ -2,6 +2,7 @@
     background-color: #3d5a80;
     text-align: center;
     color: white;
-    margin-left: 145px
+    margin-left: 220px;
+    
     
 }
